# jpeg-recompresser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jpeg_recompress.cpp  jpeg_recompress_2.cpp  jpeg_recompress_back.cpp  jpeg_recompress_back_2.cpp  jpeg_recompress_back_switching.cpp  jrec.cpp  jrec_back_swch_he.cpp  jrec_swch.cpp  jrec_swch_he.cpp
draft/lib/: jo_include_jpeg.hpp  jo_write_jpeg.cpp  jpegdec.cpp  jpegenc.cpp  nanojpeg.hpp  tables.hpp
draft/lib/dec/: nanojpeg.cpp  nanojpeg.h
draft/lib/enc/: jo_write_jpeg.cpp  jo_write_jpeg.hpp  tables.hpp
lib/: file_io.cpp  file_io.hpp
lib/jo/: jo_write_jpeg.cpp  jo_write_jpeg.hpp  tables.hpp
lib/magical/: dc_ac.hpp  dc_ac_separator.hpp  process.cpp  process.hpp  process_back.cpp  process_back.hpp  words_transform.cpp  words_transform.hpp
lib/nj/: exceptions.hpp  nanojpeg.cpp  nanojpeg.h  nanojpeg.hpp
lib/transform/: dc_ac_transform.cpp  dc_ac_transform.hpp  dc_ac_transform2.cpp  dc_ac_transform2.hpp
testing/: testing.ipynb
